crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__block_comments_nest.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
val x /* outer /* inner */ outer */ = 1

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportList
    ImportDirectiveList
  KotlinFileItemList
    PropertyDeclaration
      ModifierListSequence
      ModifierListSequence
      ValKw "val" @ 0..3 trailing=[Whitespace " "]
      CallableName
        CallableNamePartList
          Name
            Identifier "x" @ 4..5 trailing=[Whitespace " ", BlockComment "/* outer /* inner */ outer */", Whitespace " "]
      Assign "=" @ 36..37 trailing=[Whitespace " "]
      LiteralExpression
        IntegerLiteral "1" @ 38..39
      PropertyBodyMemberList
  Eof "" @ 40..40 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
