crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__comment_markers_inside_character_literals_are_literal_content.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
'/' '*'

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        LiteralExpression
          CharacterLiteral "'/'" @ 0..3 trailing=[Whitespace " "]
        ErrorNode
          CharacterLiteral "'*'" @ 4..7
      TerminatorList
  Eof "" @ 8..8 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=4..7 message="unexpected token in expression"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(4), end: TextSize(7) }) message=unexpected token in expression
