crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__ignores_a_byte_order_mark_before_a_shebang_line.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
﻿#!/usr/bin/env kotlin
val x = 1

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PropertyDeclaration
      ModifierList
      ModifierList
      ValKw "val" @ 25..28 leading=[ByteOrderMark "\u{feff}", ShebangComment "#!/usr/bin/env kotlin", Newline "\n"] trailing=[Whitespace " "]
      Name
        Identifier "x" @ 29..30 trailing=[Whitespace " "]
      PropertyInitializer
        Assign "=" @ 31..32 trailing=[Whitespace " "]
        LiteralExpression
          IntegerLiteral "1" @ 33..34
      PropertyBodyMemberList
  Eof "" @ 35..35 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
