crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__keeps_range_dots_out_of_number_literals.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
1..2 1..<2

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportList
    ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        BinaryExpression
          LiteralExpression
            IntegerLiteral "1" @ 0..1
          Range ".." @ 1..3
          LiteralExpression
            IntegerLiteral "2" @ 3..4 trailing=[Whitespace " "]
        ErrorNode
          IntegerLiteral "1" @ 5..6
        ErrorNode
          RangeUntil "..<" @ 6..9
        ErrorNode
          IntegerLiteral "2" @ 9..10
      TerminatorList
  Eof "" @ 11..11 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=5..6 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=6..9 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=9..10 message="unexpected token in expression"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(5), end: TextSize(6) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(6), end: TextSize(9) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(9), end: TextSize(10) }) message=unexpected token in expression
