crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__line_comments_can_end_at_eof.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
val x = 1 // comment

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PropertyDeclaration
      ModifierList
      ModifierList
      ValKw "val" @ 0..3 trailing=[Whitespace " "]
      Name
        Identifier "x" @ 4..5 trailing=[Whitespace " "]
      PropertyInitializer
        Assign "=" @ 6..7 trailing=[Whitespace " "]
        LiteralExpression
          IntegerLiteral "1" @ 8..9 trailing=[Whitespace " ", LineComment "// comment"]
      PropertyBodyMemberList
  Eof "" @ 21..21 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
