crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__line_comments_ignore_block_comment_markers.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
val x = 1 // /* not block */

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportList
    ImportDirectiveList
  KotlinFileItemList
    PropertyDeclaration
      ModifierListSequence
      ModifierListSequence
      ValKw "val" @ 0..3 trailing=[Whitespace " "]
      CallableName
        CallableNamePartList
          Name
            Identifier "x" @ 4..5 trailing=[Whitespace " "]
      Assign "=" @ 6..7 trailing=[Whitespace " "]
      LiteralExpression
        IntegerLiteral "1" @ 8..9 trailing=[Whitespace " ", LineComment "// /* not block */"]
      PropertyBodyMemberList
  Eof "" @ 29..29 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
