crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__modifier_keyword_spellings_remain_identifiers.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
abstract enum contract open inner override private public internal protected out vararg reified companion sealed final lateinit data value inline noinline tailrec external annotation crossinline operator infix const suspend expect actual

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    Statement
      ExpressionStatement
        BinaryExpression
          BinaryExpression
            BinaryExpression
              BinaryExpression
                BinaryExpression
                  BinaryExpression
                    BinaryExpression
                      BinaryExpression
                        BinaryExpression
                          BinaryExpression
                            BinaryExpression
                              BinaryExpression
                                BinaryExpression
                                  BinaryExpression
                                    BinaryExpression
                                      NameExpression
                                        Identifier "abstract" @ 0..8 trailing=[Whitespace " "]
                                      BinaryOperator
                                        Identifier "enum" @ 9..13 trailing=[Whitespace " "]
                                      BinaryExpressionRight
                                        NameExpression
                                          Identifier "contract" @ 14..22 trailing=[Whitespace " "]
                                    BinaryOperator
                                      Identifier "open" @ 23..27 trailing=[Whitespace " "]
                                    BinaryExpressionRight
                                      NameExpression
                                        Identifier "inner" @ 28..33 trailing=[Whitespace " "]
                                  BinaryOperator
                                    Identifier "override" @ 34..42 trailing=[Whitespace " "]
                                  BinaryExpressionRight
                                    NameExpression
                                      Identifier "private" @ 43..50 trailing=[Whitespace " "]
                                BinaryOperator
                                  Identifier "public" @ 51..57 trailing=[Whitespace " "]
                                BinaryExpressionRight
                                  NameExpression
                                    Identifier "internal" @ 58..66 trailing=[Whitespace " "]
                              BinaryOperator
                                Identifier "protected" @ 67..76 trailing=[Whitespace " "]
                              BinaryExpressionRight
                                NameExpression
                                  Identifier "out" @ 77..80 trailing=[Whitespace " "]
                            BinaryOperator
                              Identifier "vararg" @ 81..87 trailing=[Whitespace " "]
                            BinaryExpressionRight
                              NameExpression
                                Identifier "reified" @ 88..95 trailing=[Whitespace " "]
                          BinaryOperator
                            Identifier "companion" @ 96..105 trailing=[Whitespace " "]
                          BinaryExpressionRight
                            NameExpression
                              Identifier "sealed" @ 106..112 trailing=[Whitespace " "]
                        BinaryOperator
                          Identifier "final" @ 113..118 trailing=[Whitespace " "]
                        BinaryExpressionRight
                          NameExpression
                            Identifier "lateinit" @ 119..127 trailing=[Whitespace " "]
                      BinaryOperator
                        Identifier "data" @ 128..132 trailing=[Whitespace " "]
                      BinaryExpressionRight
                        NameExpression
                          Identifier "value" @ 133..138 trailing=[Whitespace " "]
                    BinaryOperator
                      Identifier "inline" @ 139..145 trailing=[Whitespace " "]
                    BinaryExpressionRight
                      NameExpression
                        Identifier "noinline" @ 146..154 trailing=[Whitespace " "]
                  BinaryOperator
                    Identifier "tailrec" @ 155..162 trailing=[Whitespace " "]
                  BinaryExpressionRight
                    NameExpression
                      Identifier "external" @ 163..171 trailing=[Whitespace " "]
                BinaryOperator
                  Identifier "annotation" @ 172..182 trailing=[Whitespace " "]
                BinaryExpressionRight
                  NameExpression
                    Identifier "crossinline" @ 183..194 trailing=[Whitespace " "]
              BinaryOperator
                Identifier "operator" @ 195..203 trailing=[Whitespace " "]
              BinaryExpressionRight
                NameExpression
                  Identifier "infix" @ 204..209 trailing=[Whitespace " "]
            BinaryOperator
              Identifier "const" @ 210..215 trailing=[Whitespace " "]
            BinaryExpressionRight
              NameExpression
                Identifier "suspend" @ 216..223 trailing=[Whitespace " "]
          BinaryOperator
            Identifier "expect" @ 224..230 trailing=[Whitespace " "]
          BinaryExpressionRight
            NameExpression
              Identifier "actual" @ 231..237
      TerminatorList
  Eof "" @ 238..238 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
