crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__raw_strings_treat_backslash_as_content.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
"""C:\tmp\file.txt"""

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              OpenQuote "\"\"\"" @ 0..3
            StringTemplateEntry
              RegularStringPart "C:" @ 3..5
            StringTemplateEntry
              RegularStringPart "\\" @ 5..6
            StringTemplateEntry
              RegularStringPart "tmp" @ 6..9
            StringTemplateEntry
              RegularStringPart "\\" @ 9..10
            StringTemplateEntry
              RegularStringPart "file.txt" @ 10..18
          ClosingQuote "\"\"\"" @ 18..21
      TerminatorList
  Eof "" @ 22..22 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
