crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_all_hard_keywords.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
package as typealias class this super val var fun for null true false is in throw return break continue object if try else while do when interface typeof as?

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PackageHeader
      PackageKw "package" @ 0..7 trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentList
          Name
      BogusPackageSuffix
        AsKw "as" @ 8..10 trailing=[Whitespace " "]
        TypeAliasKw "typealias" @ 11..20 trailing=[Whitespace " "]
        ClassKw "class" @ 21..26 trailing=[Whitespace " "]
        ThisKw "this" @ 27..31 trailing=[Whitespace " "]
        SuperKw "super" @ 32..37 trailing=[Whitespace " "]
        ValKw "val" @ 38..41 trailing=[Whitespace " "]
        VarKw "var" @ 42..45 trailing=[Whitespace " "]
        FunKw "fun" @ 46..49 trailing=[Whitespace " "]
        ForKw "for" @ 50..53 trailing=[Whitespace " "]
        NullKw "null" @ 54..58 trailing=[Whitespace " "]
        TrueKw "true" @ 59..63 trailing=[Whitespace " "]
        FalseKw "false" @ 64..69 trailing=[Whitespace " "]
        IsKw "is" @ 70..72 trailing=[Whitespace " "]
        InKw "in" @ 73..75 trailing=[Whitespace " "]
        ThrowKw "throw" @ 76..81 trailing=[Whitespace " "]
        ReturnKw "return" @ 82..88 trailing=[Whitespace " "]
        BreakKw "break" @ 89..94 trailing=[Whitespace " "]
        ContinueKw "continue" @ 95..103 trailing=[Whitespace " "]
        ObjectKw "object" @ 104..110 trailing=[Whitespace " "]
        IfKw "if" @ 111..113 trailing=[Whitespace " "]
        TryKw "try" @ 114..117 trailing=[Whitespace " "]
        ElseKw "else" @ 118..122 trailing=[Whitespace " "]
        WhileKw "while" @ 123..128 trailing=[Whitespace " "]
        DoKw "do" @ 129..131 trailing=[Whitespace " "]
        WhenKw "when" @ 132..136 trailing=[Whitespace " "]
        InterfaceKw "interface" @ 137..146 trailing=[Whitespace " "]
        TypeOfKw "typeof" @ 147..153 trailing=[Whitespace " "]
        AsSafe "as?" @ 154..157
      TerminatorList
  Eof "" @ 158..158 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=8..10 message="expected name"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=8..10 message="unexpected token in package header"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(8), end: TextSize(10) }) message=expected name
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(8), end: TextSize(10) }) message=unexpected token in package header
